--- a/btn_card_templates/button_card_templates.yaml
+++ b/btn_card_templates/button_card_templates.yaml
@@ -1061,6 +1061,113 @@ media:
 #                                               # 
 #################################################
 
+conditional_icons:
+   custom_fields:
+      icon: >
+        [[[
+            if (entity && entity.attributes.app_name) {
+              if (entity.attributes.app_name.toLowerCase().includes('netflix')) {
+                return `
+                  <svg viewBox="50 50 300 300">
+                    <g
+                      <g
+                        id="g4182">
+                        <g
+                          id="g5747"
+                          transform="matrix(0.29074008,0,0,0.29074008,81.631476,113.77111)">
+                          <path
+                            id="path4159"
+                            d="m 114.95508,-189.22852 188.12109,533.06641 0,-0.24219 14.85352,42.02539 c 82.68109,233.9563 127.10203,359.39701 127.36328,359.65821 0.17284,0.1729 12.68225,0.92753 27.79883,1.67773 45.79984,2.2727 102.55492,7.14269 145.60937,12.49219 9.91766,1.23215 18.45293,1.86506 19.04883,1.41601 l -186.66406,-529.5664 0,0.0976 -17.27735,-48.75 c -16.88185,-47.6341 -28.15376,-79.49 -95.97656,-271.249996 -18.23693,-51.562504 -33.71225,-95.296904 -34.39062,-97.187504 l -1.23438,-3.4375 -93.62695,0 -93.625,0 z"
+                            style="fill:#e50914;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
+                          <path
+                            style="fill:#b1060f;fill-opacity:1;fill-rule:evenodd;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                            d="m 451.82617,-188.60352 -0.36914,210.000004 -0.37109,209.999996 -17.27735,-48.75 c -0.006,-0.0168 -0.0273,-0.0789 -0.0332,-0.0957 l -22.32617,467.51563 c 21.95088,61.98892 33.71165,95.08081 33.84375,95.21289 0.17284,0.1729 12.68225,0.92753 27.79883,1.67773 45.79984,2.2727 102.55492,7.14269 145.60937,12.49219 9.96875,1.2385 18.54796,1.87275 19.06445,1.41016 0.5165,-0.4626 0.79775,-214.28135 0.625,-475.15235 l -0.31445,-474.31055 -93.125,0 -93.125,0 z"
+                            id="path5715" />
+                          <path
+                            style="fill:#b1060f;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                            d="m 114.95117,-189.22852 0,474.79102 c 0,261.1354 0.25552,475.04843 0.56836,475.36133 0.31282,0.3128 16.4847,-1.21398 35.9375,-3.39258 19.45278,-2.1787 46.33789,-4.88783 59.74414,-6.01953 20.56097,-1.7358 81.94995,-5.68286 89.0586,-5.72656 2.06786,-0.013 2.20049,-10.68157 2.5,-201.10157 l 0.3164,-201.08789 14.85352,42.02539 c 2.29551,6.49543 3.01555,8.52378 5.25195,14.85157 l 22.32031,-467.400394 c -4.72927,-13.371182 -2.25012,-6.352022 -7.66992,-21.675782 -18.23693,-51.562504 -33.71225,-95.296904 -34.39062,-97.187504 l -1.23438,-3.4375 -93.62695,0 -93.62891,0 z"
+                            id="path5717" />
+                          <path
+                            style="fill:#e50914;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                            d="m 114.95508,-189.22852 188.12109,533.06641 0,-0.24219 14.85352,42.02539 c 82.68109,233.9563 127.10203,359.39701 127.36328,359.65821 0.17284,0.1729 12.68225,0.92753 27.79883,1.67773 45.79984,2.2727 102.55492,7.14269 145.60937,12.49219 9.91766,1.23215 18.45293,1.86506 19.04883,1.41601 l -186.66406,-529.5664 0,0.0976 -17.27735,-48.75 c -16.88185,-47.6341 -28.15376,-79.49 -95.97656,-271.249996 -18.23693,-51.562504 -33.71225,-95.296904 -34.39062,-97.187504 l -1.23438,-3.4375 -93.62695,0 -93.625,0 z"
+                            id="path5721" />
+                        </g>
+                      </g>
+                    </g>
+                  </svg>
+                `;
+              } else if (entity.attributes.app_name.toLowerCase().includes('appletv')) {
+                return `
+                  <svg viewBox="0 0 50 50">
+                    <path d="M25.2 49.7l-13.7-.1c-2.4 0-4.6-.8-6.5-2.2-2-1.6-3.6-3.6-4.3-6.2-.2-1-.2-1.9-.3-3V11.5C.5 7.9 1.9 5 4.8 2.7 6.2 1.6 7.8.8 9.6.5c.5-.1.9-.1 1.4-.1L27.5.3l10.9.1c2.6 0 4.8.8 6.7 2.4 2.1 1.7 3.7 3.9 4.2 6.6l.2 2.4.1 20.5-.1 6.7c-.1 2.2-.9 4.2-2.2 5.9-1.7 2.2-4 3.8-6.8 4.4-.6.1-1.2.2-1.9.2-.1.1-13.4.2-13.4.2zm-4-27.8c-.9-1.2-2.2-1.6-3.7-1.2-.4.1-.8.2-1.2.4-.3.1-.6.1-.8 0-.4-.1-.8-.3-1.2-.4-.3-.1-.7-.1-1-.1-1.5.2-2.4 1.1-3 2.6-.4 1.1-.3 2.2 0 3.5.4 1.5 1 2.9 2.1 4 .5.6 1.2.9 2 .6 1.1-.5 2.2-.5 3.4 0 .8.3 1.5 0 2.1-.6.7-.8 1.1-1.8 1.6-2.8v-.2c-1-.6-1.7-1.4-1.8-2.7-.2-1.4.5-2.4 1.5-3.1zm9.9-1.4c.1.2.1.3.1.4l3.6 9.5c.1.3.3.4.6.4h.7c.6 0 .6 0 .9-.6l3.7-9.4c.1-.1.1-.3.2-.5H39l-2.9 8.3-3.1-8.3-1.9.2zM27.3 18l-1.3.4c-.5.2-.5.2-.6.7v1.4h-1.6l.1 1.4h1.5v5c0 .7.1 1.4.2 2.1.1.5.3 1 .8 1.4.8.6 2.6.7 3.5.2l-.1-1.2h-1.3c-.5 0-.9-.3-1-.8-.1-.3-.2-.6-.2-1v-5.8H30c0-.5.1-1 0-1.4h-2.7V18zm-8.8-.9c-1.9.3-3 2-2.7 3.2 1.4.2 2.9-1.7 2.7-3.2z"/>
+                  </svg>
+                `;
+              } else if (entity.attributes.app_name.toLowerCase().includes('plex')) {
+                return `
+                <svg viewBox="0 0 50 50">
+                  <path d="M7.7.3h34.6c4.1 0 7.4 3.3 7.4 7.4v34.6c0 4.1-3.3 7.4-7.4 7.4H7.7c-4.1 0-7.4-3.3-7.4-7.4V7.7C.3 3.6 3.6.3 7.7.3z" fill="#282a2d"/>
+                  <path d="M25,7.1H14.6L25,25L14.6,42.9H25L35.4,25L25,7.1z" fill="#e5a00d"/>
+                </svg>
+                `;
+              } else if (entity.attributes.app_name.toLowerCase().includes('jellyfin')) {
+                return `
+                <svg viewBox="0 0 512 512">
+                  <defs>
+                    <linearGradient id="linear-gradient" gradientUnits="userSpaceOnUse" x1="110.25" y1="213.3" x2="496.14" y2="436.09">
+                      <stop offset="0" style="stop-color:#AA5CC3"/>
+                      <stop offset="1" style="stop-color:#00A4DC"/>
+                    </linearGradient>
+                  </defs>
+                  <title>icon-transparent</title>
+                  <g id="icon-transparent">
+                    <path id="inner-shape" d="M256,201.6c-20.4,0-86.2,119.3-76.2,139.4s142.5,19.9,152.4,0S276.5,201.6,256,201.6z" fill="url(#linear-gradient)"/>
+                    <path id="outer-shape" d="M256,23.3c-61.6,0-259.8,359.4-229.6,420.1s429.3,60,459.2,0S317.6,23.3,256,23.3z
+                    M406.5,390.8c-19.6,39.3-281.1,39.8-300.9,0s110.1-275.3,150.4-275.3S426.1,351.4,406.5,390.8z" fill="url(#linear-gradient)"/>
+                  </g>
+                </svg>
+                `;
+              } else {
+                return `
+                  <svg width="50px" height="50px" viewBox="0 0 50 50">
+                  <defs>
+                  <filter id="alpha" filterUnits="objectBoundingBox" x="0%" y="0%" width="100%" height="100%">
+                    <feColorMatrix type="matrix" in="SourceGraphic" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 1 0"/>
+                  </filter>
+                  <mask id="mask0">
+                    <g filter="url(#alpha)">
+                  <rect x="0" y="0" width="50" height="50" style="fill:rgb(0%,0%,0%);fill-opacity:0.2;stroke:none;"/>
+                    </g>
+                  </mask>
+                  <clipPath id="clip1">
+                    <rect x="0" y="0" width="50" height="50"/>
+                  </clipPath>
+                  <g id="surface5" clip-path="url(#clip1)">
+                  <path style=" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;" d="M 21.972656 10.9375 C 19.625 10.894531 17.605469 12.597656 17.253906 14.921875 C 10.78125 16.898438 6.25 21.214844 6.25 21.214844 C 4.761719 22.542969 4.28125 24.667969 5.046875 26.511719 C 5.046875 26.511719 8.542969 35.652344 17.355469 38.707031 C 17.902344 40.757812 19.757812 42.183594 21.878906 42.1875 L 40.625 42.1875 C 43.214844 42.1875 45.3125 40.089844 45.3125 37.5 L 45.3125 15.625 C 45.3125 13.035156 43.214844 10.9375 40.625 10.9375 L 22.128906 10.9375 L 22.1875 10.960938 C 22.113281 10.953125 22.046875 10.941406 21.972656 10.9375 Z M 21.972656 10.9375 "/>
+                  </g>
+                  <mask id="mask1">
+                    <g filter="url(#alpha)">
+                  <rect x="0" y="0" width="50" height="50" style="fill:rgb(0%,0%,0%);fill-opacity:0.2;stroke:none;"/>
+                    </g>
+                  </mask>
+                  <clipPath id="clip2">
+                    <rect x="0" y="0" width="50" height="50"/>
+                  </clipPath>
+                  <g id="surface8" clip-path="url(#clip2)">
+                  <path style=" stroke:none;fill-rule:nonzero;fill:rgb(100%,100%,100%);fill-opacity:1;" d="M 21.972656 9.375 C 19.625 9.332031 17.605469 11.035156 17.25 13.359375 C 10.78125 15.335938 6.25 19.648438 6.25 19.648438 C 5.03125 20.738281 4.503906 22.359375 4.765625 23.921875 C 4.941406 22.902344 5.441406 21.9375 6.25 21.210938 C 6.25 21.210938 10.78125 16.898438 17.25 14.921875 C 17.605469 12.597656 19.625 10.894531 21.972656 10.9375 C 22.042969 10.9375 22.113281 10.953125 22.1875 10.957031 L 22.128906 10.9375 L 40.625 10.9375 C 43.214844 10.9375 45.3125 13.035156 45.3125 15.625 L 45.3125 14.0625 C 45.3125 11.472656 43.214844 9.375 40.625 9.375 L 22.128906 9.375 L 22.1875 9.394531 C 22.113281 9.390625 22.042969 9.375 21.972656 9.375 Z M 21.972656 9.375 "/>
+                  </g>
+                  </defs>
+                  <g id="surface1">
+                  <use xlink:href="#surface5" mask="url(#mask0)"/>
+                  <path style=" stroke:none;fill-rule:nonzero;fill:rgb(29.803922%,63.921569%,25.490196%);fill-opacity:1;" d="M 21.972656 9.375 C 19.625 9.332031 17.605469 11.035156 17.253906 13.359375 C 10.78125 15.335938 6.25 19.652344 6.25 19.652344 C 4.761719 20.980469 4.28125 23.105469 5.046875 24.949219 C 5.046875 24.949219 8.542969 34.089844 17.355469 37.144531 C 17.902344 39.195312 19.757812 40.621094 21.878906 40.625 L 40.625 40.625 C 43.214844 40.625 45.3125 38.527344 45.3125 35.9375 L 45.3125 14.0625 C 45.3125 11.472656 43.214844 9.375 40.625 9.375 L 22.128906 9.375 L 22.1875 9.398438 C 22.113281 9.390625 22.046875 9.378906 21.972656 9.375 Z M 21.972656 9.375 "/>
+                  <path style=" stroke:none;fill-rule:nonzero;fill:rgb(14.901961%,14.901961%,14.901961%);fill-opacity:1;" d="M 12.566406 23.480469 C 12.566406 23.480469 16.234375 19.070312 21.878906 18.613281 L 21.878906 17.015625 C 15.628906 17.542969 9.375 23.144531 9.375 23.144531 C 9.375 23.144531 13.28125 32.515625 21.878906 33.375 L 21.878906 31.671875 C 15.570312 30.832031 12.566406 23.480469 12.566406 23.480469 Z M 21.878906 28.289062 L 21.878906 29.847656 C 17.109375 28.949219 14.945312 23.707031 14.945312 23.707031 C 14.945312 23.707031 18.074219 21.023438 21.878906 20.589844 L 21.878906 22.296875 C 21.875 22.296875 21.875 22.296875 21.871094 22.296875 C 19.875 22.042969 17.472656 24.015625 17.472656 24.015625 C 17.472656 24.015625 19.191406 27.335938 21.878906 28.289062 M 21.878906 14.0625 L 21.878906 17.011719 C 22.0625 17 21.402344 16.984375 21.585938 16.980469 C 28.691406 16.726562 33.320312 23.144531 33.320312 23.144531 C 33.320312 23.144531 28.003906 29.980469 22.464844 29.980469 C 21.957031 29.980469 22.324219 29.929688 21.878906 29.847656 L 21.878906 31.671875 C 22.261719 31.722656 21.8125 31.753906 22.226562 31.753906 C 27.378906 31.753906 31.105469 28.96875 34.714844 25.675781 C 35.3125 26.179688 37.765625 27.414062 38.265625 27.953125 C 34.835938 30.992188 26.839844 33.445312 22.304688 33.445312 C 21.867188 33.445312 22.292969 33.414062 21.878906 33.375 L 21.878906 35.9375 L 40.625 35.9375 L 40.625 14.0625 Z M 21.878906 20.589844 L 21.878906 18.613281 C 22.058594 18.601562 21.398438 18.589844 21.585938 18.582031 C 26.695312 18.414062 30.046875 23.226562 30.046875 23.226562 C 30.046875 23.226562 26.425781 28.546875 22.546875 28.546875 C 21.988281 28.546875 22.328125 28.449219 21.878906 28.289062 L 21.878906 22.300781 C 23.867188 22.554688 23.804688 23.484375 25 25.589844 L 27.277344 23.21875 C 27.277344 23.21875 25.339844 20.527344 22.066406 20.527344 C 21.710938 20.527344 22.210938 20.550781 21.878906 20.589844 "/>
+                  <use xlink:href="#surface8" mask="url(#mask1)"/>
+                  </g>
+                  </svg>
+                `;
+              }
+            }
+        ]]]
+
 conditional_media:
   aspect_ratio: 1000/996
   template:
@@ -1091,13 +1198,25 @@ conditional_media:
                 : data[variables.i].number,
               output = `${data[variables.i].title} ${number}`;
           } else {
-            var output = artist === undefined && title !== undefined
-              ? title
-              : title === undefined && artist !== undefined
-                ? artist
-                : title !== undefined && artist !== undefined
-                  ? `${artist} - ${title}`
-                  : variables.translate_idle;
+            if (entity.attributes.app_name) {
+              if (entity.attributes.app_name.toLowerCase().includes('netflix')) {
+                var output = 'Netflix';
+              } else if (entity.attributes.app_name.toLowerCase().includes('appletv')) {
+                var output = 'Apple TV';
+              } else if (entity.attributes.app_name.toLowerCase().includes('plex')) {
+                var output = 'Plex';
+              } else if (entity.attributes.app_name.toLowerCase().includes('jellyfin')) {
+                var output = 'Jellyfin';
+              }
+            } else {
+              var output = artist === undefined && title !== undefined
+                ? title
+                : title === undefined && artist !== undefined
+                  ? artist
+                  : title !== undefined && artist !== undefined
+                    ? `${artist} - ${title}`
+                    : variables.translate_idle;
+            }
           }
         function marquee() {
           let state = elt.getElementById("state"),
@@ -1370,6 +1489,25 @@ icon_plex:
       <svg viewBox="0 0 50 50">
         <path d="M7.7.3h34.6c4.1 0 7.4 3.3 7.4 7.4v34.6c0 4.1-3.3 7.4-7.4 7.4H7.7c-4.1 0-7.4-3.3-7.4-7.4V7.7C.3 3.6 3.6.3 7.7.3z" fill="#282a2d"/>
         <path d="M25,7.1H14.6L25,25L14.6,42.9H25L35.4,25L25,7.1z" fill="#e5a00d"/>
+      </svg>
+
+# https://github.com/jellyfin/jellyfin-ux/tree/master/branding/SVG
+icon_jellyfin:
+  custom_fields:
+    icon: >
+      <svg viewBox="0 0 512 512">
+        <defs>
+          <linearGradient id="linear-gradient" gradientUnits="userSpaceOnUse" x1="110.25" y1="213.3" x2="496.14" y2="436.09">
+            <stop offset="0" style="stop-color:#AA5CC3"/>
+            <stop offset="1" style="stop-color:#00A4DC"/>
+          </linearGradient>
+        </defs>
+        <title>icon-transparent</title>
+        <g id="icon-transparent">
+          <path id="inner-shape" d="M256,201.6c-20.4,0-86.2,119.3-76.2,139.4s142.5,19.9,152.4,0S276.5,201.6,256,201.6z" fill="url(#linear-gradient)"/>
+          <path id="outer-shape" d="M256,23.3c-61.6,0-259.8,359.4-229.6,420.1s429.3,60,459.2,0S317.6,23.3,256,23.3z
+          M406.5,390.8c-19.6,39.3-281.1,39.8-300.9,0s110.1-275.3,150.4-275.3S426.1,351.4,406.5,390.8z" fill="url(#linear-gradient)"/>
+        </g>
       </svg>
 
 icon_apple_tv:
